trunk/examples/parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Unused terminals:

    ACCENT
    FORWARD_SLASH
    MINUS
    QUOTE
    TILDA
    PLUS
    ATSIGN
    ASTERISK
    BACK_SLASH
    AMPERSAND
    DOLLARSIGN

Grammar

Rule 0     S' -> target_list
Rule 1     target_list -> target target
Rule 2     target -> target_name body_code
Rule 3     target_name -> NAME COLON
Rule 4     target_name -> PERIOD NAME COLON
Rule 5     body_code -> TAB name_list
Rule 6     name_list -> name_list NAME
Rule 7     name_list -> NAME
Rule 8     name_list -> empty
Rule 9     config_defn -> topdict_list
Rule 10    topdict_list -> topdict_list topdict_defn
Rule 11    topdict_list -> topdict_defn
Rule 12    topdict_list -> empty
Rule 13    topdict_defn -> LEFT_ANGLE NAME RIGHT_ANGLE dict_elem_list
Rule 14    dict_defn -> LEFT_BRACE dict_elem_list RIGHT_BRACE
Rule 15    dict_elem_list -> dict_elem_list dict_member_defn
Rule 16    dict_elem_list -> dict_member_defn
Rule 17    dict_elem_list -> empty
Rule 18    dict_member_defn -> NAME EQUAL data_defn
Rule 19    list_defn -> LEFT_SQUARE list_elem_list RIGHT_SQUARE
Rule 20    list_elem_list -> list_elem_list COMMA data_defn
Rule 21    list_elem_list -> list_elem_list data_defn
Rule 22    list_elem_list -> data_defn
Rule 23    list_elem_list -> empty
Rule 24    tuple_defn -> NAME LEFT_PAREN dict_elem_list RIGHT_PAREN
Rule 25    data_defn -> NAME
Rule 26    data_defn -> NUMBER
Rule 27    data_defn -> string
Rule 28    data_defn -> tuple_defn
Rule 29    data_defn -> list_defn
Rule 30    data_defn -> dict_defn
Rule 31    string -> STRING_LITERAL
Rule 32    empty -> <empty>

Terminals, with rules where they appear

ACCENT               : 
AMPERSAND            : 
ASTERISK             : 
ATSIGN               : 
BACK_SLASH           : 
COLON                : 3 4
COMMA                : 20
DOLLARSIGN           : 
EQUAL                : 18
FORWARD_SLASH        : 
LEFT_ANGLE           : 13
LEFT_BRACE           : 14
LEFT_PAREN           : 24
LEFT_SQUARE          : 19
MINUS                : 
NAME                 : 3 4 6 7 13 18 24 25
NUMBER               : 26
PERIOD               : 4
PLUS                 : 
QUOTE                : 
RIGHT_ANGLE          : 13
RIGHT_BRACE          : 14
RIGHT_PAREN          : 24
RIGHT_SQUARE         : 19
STRING_LITERAL       : 31
TAB                  : 5
TILDA                : 
error                : 

Nonterminals, with rules where they appear

body_code            : 2
config_defn          : 
data_defn            : 18 20 21 22
dict_defn            : 30
dict_elem_list       : 13 14 15 24
dict_member_defn     : 15 16
empty                : 8 12 17 23
list_defn            : 29
list_elem_list       : 19 20 21
name_list            : 5 6
string               : 27
target               : 1 1
target_list          : 0
target_name          : 2
topdict_defn         : 10 11
topdict_list         : 9 10
tuple_defn           : 28

Parsing method: LALR

state 0

    (0) S' -> . target_list
    (1) target_list -> . target target
    (2) target -> . target_name body_code
    (3) target_name -> . NAME COLON
    (4) target_name -> . PERIOD NAME COLON

    NAME            shift and go to state 1
    PERIOD          shift and go to state 3

    target_name                    shift and go to state 2
    target_list                    shift and go to state 4
    target                         shift and go to state 5

state 1

    (3) target_name -> NAME . COLON

    COLON           shift and go to state 6


state 2

    (2) target -> target_name . body_code
    (5) body_code -> . TAB name_list

    TAB             shift and go to state 8

    body_code                      shift and go to state 7

state 3

    (4) target_name -> PERIOD . NAME COLON

    NAME            shift and go to state 9


state 4

    (0) S' -> target_list .



state 5

    (1) target_list -> target . target
    (2) target -> . target_name body_code
    (3) target_name -> . NAME COLON
    (4) target_name -> . PERIOD NAME COLON

    NAME            shift and go to state 1
    PERIOD          shift and go to state 3

    target_name                    shift and go to state 2
    target                         shift and go to state 10

state 6

    (3) target_name -> NAME COLON .

    TAB             reduce using rule 3 (target_name -> NAME COLON .)


state 7

    (2) target -> target_name body_code .

    $end            reduce using rule 2 (target -> target_name body_code .)
    NAME            reduce using rule 2 (target -> target_name body_code .)
    PERIOD          reduce using rule 2 (target -> target_name body_code .)


state 8

    (5) body_code -> TAB . name_list
    (6) name_list -> . name_list NAME
    (7) name_list -> . NAME
    (8) name_list -> . empty
    (32) empty -> .

  ! shift/reduce conflict for NAME resolved as shift
    NAME            shift and go to state 13
    PERIOD          reduce using rule 32 (empty -> .)
    $end            reduce using rule 32 (empty -> .)

  ! NAME            [ reduce using rule 32 (empty -> .) ]

    name_list                      shift and go to state 12
    empty                          shift and go to state 11

state 9

    (4) target_name -> PERIOD NAME . COLON

    COLON           shift and go to state 14


state 10

    (1) target_list -> target target .

    $end            reduce using rule 1 (target_list -> target target .)


state 11

    (8) name_list -> empty .

    NAME            reduce using rule 8 (name_list -> empty .)
    PERIOD          reduce using rule 8 (name_list -> empty .)
    $end            reduce using rule 8 (name_list -> empty .)


state 12

    (5) body_code -> TAB name_list .
    (6) name_list -> name_list . NAME

  ! shift/reduce conflict for NAME resolved as shift
    PERIOD          reduce using rule 5 (body_code -> TAB name_list .)
    $end            reduce using rule 5 (body_code -> TAB name_list .)
    NAME            shift and go to state 15

  ! NAME            [ reduce using rule 5 (body_code -> TAB name_list .) ]


state 13

    (7) name_list -> NAME .

    NAME            reduce using rule 7 (name_list -> NAME .)
    PERIOD          reduce using rule 7 (name_list -> NAME .)
    $end            reduce using rule 7 (name_list -> NAME .)


state 14

    (4) target_name -> PERIOD NAME COLON .

    TAB             reduce using rule 4 (target_name -> PERIOD NAME COLON .)


state 15

    (6) name_list -> name_list NAME .

    NAME            reduce using rule 6 (name_list -> name_list NAME .)
    PERIOD          reduce using rule 6 (name_list -> name_list NAME .)
    $end            reduce using rule 6 (name_list -> name_list NAME .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for NAME in state 8 resolved as shift
WARNING: shift/reduce conflict for NAME in state 12 resolved as shift
